# Jogo-de-xadrez

./: CMakeLists.txt  README.MD  main.cpp
src/: Game.h  GameSettings.h  Ui.h
src/board/: Board.h  Square.h
src/movement/: BishopMovementRule.h  Directions.h  KMovimentRule.h  KnightMovimenteRule.h  MovementRule.h  MovimentRule.h  PawnMovementRule.h  PawnMovimentRule.h  PossibleMove.h  PossibleMoves.h  QueenMovementRule.h  RookMovimentRule.h
src/pieces/: Bishop.h  Horse.h  King.h  Knight.h  Pawn.h  Piece.h  PieceFactory.h  PieceName.h  Queen.h  Rook.h
src/renderer/: Renderer.cpp  Renderer.h
